--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -15,12 +15,19 @@
   flex-direction: column;
   gap: 32px;
   grid-row-start: 2;
+  padding-top: 80px;
 }
 
+
 .footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--main-color);
+  color: white;
+  padding: 1em;
+  text-align: center;
 }
 
 .footer a {
